--- a/libbeat/scripts/Makefile
+++ b/libbeat/scripts/Makefile
@@ -37,7 +37,7 @@ PROCESSES?= 4
 TIMEOUT?= 90
 TEST_ENVIRONMENT?=false
 SYSTEM_TESTS?=false
-GOX_OS?=linux darwin windows solaris freebsd netbsd openbsd
+GOX_OS?=linux darwin #windows solaris freebsd netbsd openbsd
 DOCKER_COMPOSE?=docker-compose -f docker-compose.yml
 GOPACKAGES_COMMA_SEP=$(subst $(space),$(comma),$(strip ${GOPACKAGES}))
 
